# redirectioneaza

./: .bowerrc  .dockerignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitguardian.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  TODO.md  app.py  app.yaml  app.yaml.example  appengine_config.py  bower.json  config.py  core.py  cron.py  dkcp.base.yml  docker-compose.base.yml  docker-compose.dbless.yml  docker-compose.mysql.yml  docker-compose.prod.yml  docker-compose.psql.yml  docker-compose.yml  index.yaml  main.py  manage.py  requirements.txt  run.py  utils.py
backend/: .bowerrc  .dockerignore  bower.json  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  tailwind.config.js  vite.config.js
backend/_appengine_legacy/: app.yaml.example  cron.py  index.yaml  main.py
backend/_appengine_legacy/controllers/: account_management.py  admin.py  captcha.py  site.py
backend/_appengine_legacy/models/: email.py  handlers.py  storage.py
backend/_appengine_legacy/views/: base.html  cont-nou.html  despre.html  index.html  terms.html
backend/assets/: clearElementOnAlpineVariableChange.js  clearElementOnCheckboxChange.js  clearElementOnVariableChange.js  combobox.js  imageUpload.js  main.css  main.js  ngoSearch.js  select.js  signature.js  twoPercentForm.js
backend/dashboard/: admin.py
backend/donations/: admin.py  apps.py  context_processors.py  extract.py  forms.py  models.py  pdf.py  urls_ngo_account.py
backend/donations/admin/: __init__.py  byof.py  causes.py  common.py  donors.py  download_jobs.py  jobs.py  ngos.py
backend/donations/forms/: account.py  common.py  donation.py  ngo_account.py  redirection.py
backend/donations/migrations/: 0001_initial.py  0002_alter_ngo_form_url.py  0002_initial.py  0003_alter_donor_pdf_file.py  0003_alter_ngo_name_alter_ngo_slug.py  0003_donor_initial_donor_personal_identifier_and_more.py  0003_remove_job_url_job_date_finished_job_zip.py  0004_alter_donor_date_created_alter_ngo_date_created.py  0004_ngo_image_ngo_logo_alter_ngo_form_url_and_more.py  0004_remove_ngo_custom_form_ngo_prefilled_form.py  0004_remove_ngo_form_url_remove_ngo_id_ngo_custom_form_and_more.py  0005_alter_donor_ngo.py  0005_alter_ngo_prefilled_form.py  0005_rename_personal_identifier_donor_cnp.py  0006_alter_donor_pdf_file_alter_ngo_prefilled_form.py  0006_donor_pdf_file.py  0006_remove_job_url_job_date_finished_job_zip.py  0007_alter_donor_date_created_alter_ngo_date_created.py  0007_donor_address.py  0007_remove_ngo_form_url_unique_ngo_custom_form_and_more.py  0008_alter_job_options_alter_job_ngo_alter_job_owner.py  0008_remove_donor_address_remove_donor_cnp_and_more.py  0009_alter_donor_date_created_alter_ngo_date_created.py  0010_alter_donor_date_created_alter_ngo_date_created.py  0011_alter_donor_first_name_alter_donor_last_name.py  0012_remove_ngo_form_url_remove_ngo_image_and_more.py  0013_rename_has_special_status_ngo_is_social_service_viable_and_more.py  0014_rename_first_name_donor_l_name.py  0015_rename_last_name_donor_f_name.py  0016_remove_donor_pdf_url.py  0017_alter_ngo_is_accepting_forms.py  0017_donor_anaf_gdpr.py  0018_add_romanian_unaccent.py  0018_alter_ngo_is_accepting_forms.py  0019_add_romanian_unaccent.py  0019_ngo_display_email_ngo_display_phone.py  0020_ngo_display_email_ngo_display_phone.py  0020_ngo_locality.py  0021_ngo_locality.py  0022_cause.py  (+44 more)
backend/donations/models/: __init__.py  byof.py  common.py  donors.py  downloads.py  jobs.py  main.py  ngos.py  stat_configs.py
backend/donations/templatetags/: action_menu.py  cause_action_menu.py  elided_pagination.py  redirection_action_menu.py  redirection_helpers.py  text_format.py  url_extras.py
backend/donations/tests/: builder.py  conftest.py  test_donor_anonymization.py  test_donor_encryption.py  test_form_signature.py  test_form_signature2.py  test_ngo_cif_validation.py  test_ngo_updates_remove_prefilled_forms.py  test_redirection_disable_link_view.py  test_redirection_form_signature.py
backend/donations/views/: __init__.py  account_management.py  admin.py  admin_dashboard.py  api.py  api_download.py  base.py  captcha.py  common.py  cron.py  donations_download.py  errors.py  my_account.py  ngo.py  ngo_account.py  ngo_account_filters.py  redirections.py  site.py
backend/donations/workers/: check_organization.py  update_organization.py
backend/editions/: apps.py  calendar.py
backend/frequent_questions/: admin.py  apps.py  models.py  views.py
backend/frequent_questions/data/: seed-data.html  seed-data.json
backend/frequent_questions/migrations/: 0001_initial.py  0002_alter_question_options_alter_section_options.py  0003_alter_question_options_alter_section_options.py
backend/importer/: admin.py  apps.py  extract.py  models.py  tasks.py
backend/importer/migrations/: 0001_initial.py  0002_alter_importjob_import_type.py  0003_alter_importjob_csv_file.py  0004_alter_importjob_options_remove_importjob_csv_file_and_more.py  0005_delete_importjob.py
backend/importer/tasks/: donor_forms.py  logos.py  processor.py  repair_addresses.py  utils.py
backend/partners/: admin.py  apps.py  context_processors.py  middleware.py  models.py  tests.py
backend/partners/migrations/: 0001_initial.py  0002_alter_partner_ngos.py  0002_partner_has_custom_header_partner_has_custom_note.py  0003_partner_date_created_partner_date_updated.py  0003_partner_display_ordering_alter_partner_subdomain.py  0004_partnerngo.py  0005_auto_20250211_1317.py  0006_remove_partner_ngos.py  0007_partner_ngos.py  (+5 more)
backend/q_heartbeat/: apps.py
backend/redirectioneaza/: asgi.py  callbacks.py  context_processors.py  jinja2.py  settings.py  social_adapters.py  urls.py  views.py  wsgi.py
backend/static_extras/: TODO.txt
backend/stats/: api.py  models.py
backend/users/: admin.py  apps.py  context_processors.py  groups_management.py  models.py  tests.py
backend/utils/: helper_logging.py  models_hashing.py  random.py  staging.py
(+667 files in other folders)
