[project]
name = "redirectioneaza"
version = "3.0.0"
description = "A tool to help NGOs with managing the redirection of people's tax income."

requires-python = ">=3.13"
dependencies = [
  "blessed~=1.21.0",
  "cryptography~=45.0.7",
  "django~=5.2.0",
  "django-allauth~=65.7",
  "django-environ~=0.12",
  "django-import-export~=4.3",
  "django-ipware~=7.0.1",
  "django-localflavor~=5.0.0",
  "django-q2~=1.8.0",
  "django-recaptcha~=4.1.0",
  "django-ses~=4.4",
  "django-storages[s3]~=1.14.6",
  "django-tinymce~=4.1.0",
  # django-unfold: newer versions use Tailwind 4, while the frontend uses Tailwind 3
  # pinned because of a bug in >=0.54.0
  "django-unfold==0.53.0",
  "django-vite~=3.1",
  "gevent~=25.8.2",
  "gunicorn~=23.0.0",
  "ngohub~=0.1.0",
  "phonenumbers~=9.0",
  "psutil~=7.0.0",
  "psycopg2-binary~=2.9.9",
  "pycognito~=2024.5.1",
  "pydantic[email]~=2.11",
  "pymysql~=1.1",
  "pypdf~=6.0.0",
  "reportlab~=4.4",
  "requests~=2.32.3",
  "sentry-sdk[django]~=2.27",
  "svglib~=1.5.1",
  "whitenoise~=6.9",
]


[dependency-groups]
test = [
  "faker~=37.1",
  "pytest~=8.4.1",
  "pytest-cov~=6.2.1",
  "pytest-django~=4.11.1",
  "pytest-xdist~=3.8.0",
]
ruff = [
  "ruff~=0.12.11"
]
dev = [
  "debugpy~=1.8.14",
  { include-group = "ruff" },
  { include-group = "test" },
]


[tool.ruff]
# Enable the following rules
# More info: https://docs.astral.sh/ruff/rules/

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "migrations",
  "_appengine_legacy",
]

# Same as Black.
line-length = 120

# Assume Python 3.13.
target-version = "py313"


[lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = []

select = [
  "DJ", # Flake8-Django - https://docs.astral.sh/ruff/rules/#flake8-django-dj
  "E", # Pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
  "W", # Pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
  "F", # Pyflakes - https://docs.astral.sh/ruff/rules/#pyflakes-f
  "T10", # Debugger - https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
  "T20", # Remove print/pprint statements - https://docs.astral.sh/ruff/rules/#flake8-print-t20
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.ruff.lint.extend-per-file-ignores]
"_appengine_legacy/**" = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
"redirectioneaza/settings/**" = ["F403"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "redirectioneaza.settings"

python_files = [
  "test.py",
  "test*.py",
  "*test.py",
  "*tests.py",
  "backend/*/tests/*.py",
]
filterwarnings = [
  "ignore:The django.utils.baseconv module is deprecated."
]


[tool.coverage.run]
omit = [
  # omit all migration folders
  "*/migrations/*",
  # omit all test folders
  "*/tests/*",
]


[tool.black]
line-length = 120
target-version = ["py313"]
extend-exclude = '''
/(
  | migrations
)/
'''
